@@ -13,16 +13,19 @@
  */
 package io.trino.plugin.bigquery;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.io.Resources;
+import io.trino.testing.AbstractTestQueryFramework;
 import io.trino.testing.QueryRunner;
 import io.trino.testing.containers.MitmProxy;
+import io.trino.testing.sql.TestTable;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.net.URISyntaxException;
+import java.util.Map;
 
-public class TestBigQueryWithProxyConnectorSmokeTest
-        extends BaseBigQueryConnectorSmokeTest
+public class TestBigQueryWithProxyTest
+        extends AbstractTestQueryFramework
 {
     @Override
     protected QueryRunner createQueryRunner()
@@ -32,16 +35,22 @@ public class TestBigQueryWithProxyConnectorSmokeTest
                 .withSSLCertificate(fromResources("proxy/cert.pem").toPath())
                 .build());
         proxy.start();
-        QueryRunner queryRunner = BigQueryQueryRunner.createQueryRunner(
-                ImmutableMap.of(),
-                ImmutableMap.of(
+        return BigQueryQueryRunner.builder()
+                .setConnectorProperties(Map.of(
                         "bigquery.rpc-proxy.enabled", "true",
                         "bigquery.rpc-proxy.uri", proxy.getProxyEndpoint(),
                         "bigquery.rpc-proxy.truststore-path", fromResources("proxy/truststore.jks").getAbsolutePath(),
-                        "bigquery.rpc-proxy.truststore-password", "123456"),
-                REQUIRED_TPCH_TABLES);
+                        "bigquery.rpc-proxy.truststore-password", "123456"))
+                .build();
+    }
 
-        return queryRunner;
+    @Test
+    void testCreateTableAsSelect()
+    {
+        // This test covers all client (BigQuery, BigQueryReadClient and BigQueryWriteClient)
+        try (TestTable table = new TestTable(getQueryRunner()::execute, "test.test_ctas", "AS SELECT 42 x")) {
+            assertQuery("SELECT * FROM " + table.getName(), "VALUES 42");
+        }
     }
 
     private static File fromResources(String filename)
